# PHAS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: phaseEditor.h  readFile.h
src/: main.cpp  phaseEditor.cpp  readFile.cpp
